--- a/styles.css
+++ b/styles.css
@@ -51,3 +51,19 @@ body{
 #m1, #m2, #m3, #m4 {
     display: none;
 }
+#m1, #m2, #m3, #m4 {
+    display: none;
+ position: absolute;
+ background: rgba(21, 23, 45, 0.5);
+ transition: 0.5s;
+ color: white;
+ /* border: 1px solid white; */
+ margin-left: 15px;
+ margin-top: 15px;
+ text-align: center;
+ padding: 50px;
+}
+.card {
+    width: 283;
+    height: 200;
+}
