--- a/styles.css
+++ b/styles.css
@@ -1,69 +1,78 @@
-
 .home {
-    background-image: url('../images/pizza1.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    color: white;
-    text-align: center;
+  background-image: url("../images/pizza1.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  color: white;
+  text-align: center;
 }
 #k2 {
-    text-shadow: 2px 2px gold;
-    text-align: center;
+  text-shadow: 2px 2px gold;
+  text-align: center;
 }
 ul {
-    display: flex;
-    justify-content:  space-around;
-    flex-direction: row;
-    background-color: honeydew;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: row;
+  background-color: honeydew;
 }
 nav {
-    background: goldenrod;
-    height: 80px;
-    width: 100%; 
+  background: goldenrod;
+  height: 80px;
+  width: 100%;
 }
 nav ul {
-    float: right;
+  float: right;
 }
 nav ul li {
-    display: inline-block;
-    line-height: 80px;
-    margin: 0.5px;
+  display: inline-block;
+  line-height: 80px;
+  margin: 0.5px;
 }
 nav ul li a {
-    color: rgb(207, 63, 27);
-    font-size: 17px;
-    padding: 7px 13px;
-    border-radius: 3px;
+  color: rgb(207, 63, 27);
+  font-size: 17px;
+  padding: 7px 13px;
+  border-radius: 3px;
 }
 a:hover {
-    transition: .5sec;
-    color: blue;
+  transition: 0.5sec;
+  color: blue;
 }
-body{
-    /* background-image: url('../images/pasta.png');
+body {
+  /* background-image: url('../images/pasta.png');
     background-repeat: no-repeat;
     background-size: cover; */
-    background-color: teal;
+  background-color: teal;
 }
- .row img{
-    padding-right: 30px;
+.row img {
+  padding-right: 30px;
 }
-#m1, #m2, #m3, #m4 {
-    display: none;
+#m1,
+#m2,
+#m3,
+#m4 {
+  display: none;
 }
-#m1, #m2, #m3, #m4 {
-    display: none;
- position: absolute;
- background: rgba(21, 23, 45, 0.5);
- transition: 0.5s;
- color: white;
- /* border: 1px solid white; */
- margin-left: 15px;
- margin-top: 15px;
- text-align: center;
- padding: 50px;
+#m1,
+#m2,
+#m3,
+#m4,
+#m5,
+#m6,
+#m7,
+#m8 {
+  display: none;
+  position: absolute;
+  background: rgba(21, 23, 45, 0.5);
+  transition: 0.5s;
+  color: white;
+  border: 1px solid white;
+  margin-left: 15px;
+  margin-top: 15px;
+  text-align: center;
+  padding: 53px;
 }
 .card {
-    width: 283;
-    height: 200;
+  width: 283;
+  height: 200;
 }
