--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-.home {
+#home {
   background-image: url("../images/pizza1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
@@ -38,12 +38,6 @@ a:hover {
   transition: 0.5sec;
   color: blue;
 }
-body {
-  /* background-image: url('../images/pasta.png');
-    background-repeat: no-repeat;
-    background-size: cover; */
-  background-color: teal;
-}
 .row img {
   padding-right: 30px;
 }
@@ -72,4 +66,11 @@ body {
 }
 #k3 {
     color: white;
+}
+#bot {
+  text-align: center;
+  color: goldenrod;
+}
+.us {
+  font-size: 20px;
 }
