--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ a:hover {
   background: rgba(21, 23, 45, 0.5);
   transition: 0.5s;
   color: white;
-  border: 1px solid white;
+  border-radius: 0;
   margin-left: 15px;
   margin-top: 15px;
   text-align: center;
@@ -81,3 +81,77 @@ a:hover {
  #rowe {
    margin-left: 30%;
  }
+ .wrapper {
+   width: 1200px;
+   margin: 100px auto;
+ }
+ .title {
+   text-align: center;
+   margin-bottom: 60px; 
+ }
+ .title h4 {
+   text-transform: capitalize;
+   font-size: 36px;
+   position: relative;
+   display: inline-block;
+   padding-bottom: 10px;
+ }
+ .title h4 span {
+   display: block;
+   font-size: 18px;
+   font-style: italic;
+   margin-bottom: -10px;
+ }
+ .title h4:before {
+   position: absolute;
+   content: "";
+   width: 100px;
+   height: 2px;
+   background-color: green;
+   bottom: 0;
+   left: 50%;
+   transform: translatex(-50%);
+ }
+ .menu {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+ }
+ .single-menu {
+   flex-basis: 580px;
+   margin-bottom: 40px;
+  padding-bottom: 40px;
+  /* border-bottom: 1px solid green; */
+ }
+ .single-menu:nth-child(5), .single-menu:nth-child(6) {
+  border-bottom: 0;
+ }
+  .single-menu {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .single-menu img {
+    max-width: 180px;
+    margin-right: 30px;
+    border-radius: 50%;
+    border: 1px solid green;
+    padding: 3px;
+    transition: .5s;
+    float: right;
+  }
+  .single-menu h4 {
+    text-transform: capitalize;
+    font-size: 22px;
+    border-bottom: 1px dashed green;
+    margin-bottom: 5px;
+    padding-bottom: 5px;
+  }
+  .single-menu h4 span {
+    float: right;
+    color: orange;
+    font-style: italic;
+  }
+  .single-menu:hover img{
+    border-radius: 0;
+  }
