--- a/styles.css
+++ b/styles.css
@@ -118,10 +118,8 @@ a:hover {
    justify-content: space-between;
  }
  .single-menu {
-   flex-basis: 580px;
    margin-bottom: 40px;
-  padding-bottom: 40px;
-  /* border-bottom: 1px solid green; */
+
  }
  .single-menu:nth-child(5), .single-menu:nth-child(6) {
   border-bottom: 0;
@@ -129,7 +127,7 @@ a:hover {
   .single-menu {
     display: flex;
     flex-direction: row;
-    align-items: center;
+
   }
   .single-menu img {
     max-width: 180px;
@@ -145,7 +143,7 @@ a:hover {
     font-size: 22px;
     border-bottom: 1px dashed green;
     margin-bottom: 5px;
-    padding-bottom: 5px;
+  
   }
   .single-menu h4 span {
     float: right;
@@ -154,4 +152,7 @@ a:hover {
   }
   .single-menu:hover img{
     border-radius: 0;
+  }
+  .single-menu {
+    float: right;
   }
