--- a/styles.css
+++ b/styles.css
@@ -156,3 +156,9 @@ a:hover {
   .single-menu {
     float: right;
   }
+  @media only screen and (max-width: 600px) {
+    body {
+      background-color: teal;
+    }
+  }
+  
