removed root dots

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 #home {
-  background-image: url("../images/pizza1.jpg");
+  background-image: url("./images/pizza1.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   color: rgb(129, 113, 113);
